# form-pilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-build.sh  pyproject.toml
.streamlit/: config.toml
app/: app.py  main.py  models.py  start.py
app/chat_agent/: graph.py  helpers.py  judge_answer.py  prompts.py
app/context/: document_loaders.py  loader.py
app/doc_handlers/: pdf.py
app/form/: inquire.py  prefill.py  status.py  update.py
app/graphs/: complete_form_field.py  form_pilot.py  generate_question.py  load_context.py  manage_form_completion.py  pre_fill_form.py
app/utils/: llm.py  misc.py  setup.py
backend/: pyproject.toml
backend/app/: app.py  graph.py  main.py  tools.py
backend/app/docs/checkpoints/: form-example.json
backend/app/graphs/: form_pilot.py  load_context.py  pre_fill_form.py  test_form_pilot.py
backend/app/utils/: setup.py
form_pilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
