[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "form-pilot-backend"
version = "0.1.0"
description = "Backend server for trending information retrieval"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "langchain>=0.3.25",
  "langchain-community>=0.3.24",
  "langchain-google-community>=2.0.7",
  "langchain-openai>=0.3.18",
  "langgraph>=0.4.7",
  "markdown>=3.8",
  "pypdf2>=3.0.1",
  "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
] 
